Fix alignment issue based on information provided by Arvind.

--- a/v1/LinkInks/Content/Chapter.css
+++ b/v1/LinkInks/Content/Chapter.css
@@ -62,6 +62,7 @@
 {
     position:       relative;
     width:          550px;
+    height:         550px;
 }
 
 #rightPage
